// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should contain target="_blank" when openNewTab is set true 1`] = `
<scale-link href="http://example.com" open-new-tab="true">
  <mock:shadow-root>
    <a class="link" href="http://example.com" target="_self">
      <span class="link__wrapper">
        <slot></slot>
      </span>
    </a>
  </mock:shadow-root>
  Label
</scale-link>
`;

exports[`Link should have link href value when href value is set 1`] = `
<scale-link href="http://example.com">
  <mock:shadow-root>
    <a class="link" href="http://example.com" target="_self">
      <span class="link__wrapper">
        <slot></slot>
      </span>
    </a>
  </mock:shadow-root>
  Label
</scale-link>
`;

exports[`Link should match snapshot 1`] = `
<scale-link>
  <mock:shadow-root>
    <a class="link" target="_self">
      <span class="link__wrapper">
        <slot></slot>
      </span>
    </a>
  </mock:shadow-root>
  default
</scale-link>
`;
